--- a/cards/pom.xml
+++ b/cards/pom.xml
@@ -34,8 +34,8 @@
     </dependency>
 
     <dependency>
-      <groupId>com.h2database</groupId>
-      <artifactId>h2</artifactId>
+      <groupId>com.mysql</groupId>
+      <artifactId>mysql-connector-j</artifactId>
       <scope>runtime</scope>
     </dependency>
     <dependency>
@@ -69,6 +69,18 @@
     <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-config</artifactId>
+    </dependency><dependency>
+    <groupId>org.springframework.cloud</groupId>
+    <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+  </dependency>
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-openfeign</artifactId>
     </dependency>
   </dependencies>
 
@@ -92,7 +104,7 @@
         <version>3.4.1</version>
         <configuration>
           <to>
-            <image>junghunchoi/${project.artifactId}:s4</image>
+            <image>junghunchoi/${project.artifactId}:s9</image>
             <auth>
               <username>azzudi@naver.com</username>
               <password>chlwjdgns13!</password>
