--- a/gatewayserver/src/main/resources/application.yml
+++ b/gatewayserver/src/main/resources/application.yml
@@ -30,12 +30,21 @@ management:
 
 info:
   app:
-    name: "accounts"
+    name: "gatewayserver"
     description: "Eazy Bank Accounts Application"
     version: "1.0.0"
+
 
 logging:
   level:
     com:
-      eazybyes:
+      eazybytes:
         gatewayserver: DEBUG
+
+resilience4j.circuitbreaker:
+  configs:
+    default:
+      slidingWindowSize: 10 # 갯수만큼의 요청이 오면 서비스의 상태를 확인하는지.
+      permittedNumberOfCallsInHalfOpenState: 2 # half open 상태를 처리할 때 설정한 요청의 갯수만큼이 올 떄 확안.
+      failureRateThreshold: 50 # 숫자만큼 실패하면 open 상태로 바뀐다.
+      waitDurationInOpenState: 10000 # 설정한 시간만큼 half open 상태로 둔다.
