--- a/loans/src/main/resources/application.yml
+++ b/loans/src/main/resources/application.yml
@@ -60,6 +60,12 @@ eureka:
     serviceUrl:
       defaultZone: http://localhost:8070/eureka/
 
+logging:
+  level:
+    com:
+      eazybyes:
+        loans: DEBUG
+
 info:
   app:
     name: "loans"
