[2024.06.24] 프로메테우스 학습 커밋

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,8 @@ build/
 ### VS Code ###
 .vscode/
 /.idea/
+
+
+### docker compose ###
+./docker-compose/observability
+./docker-compose/prod/.data
