--- a/accounts/pom.xml
+++ b/accounts/pom.xml
@@ -73,11 +73,19 @@
     </dependency>
     <dependency>
       <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-circuitbreaker-resilience4j</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-bus-amqp</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-test</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.micrometer</groupId>
+      <artifactId>micrometer-registry-prometheus</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework.cloud</groupId>
@@ -126,7 +134,7 @@
         <version>3.4.1</version>
         <configuration>
           <to>
-            <image>junghunchoi/${project.artifactId}:s9</image>
+            <image>junghunchoi/${project.artifactId}:s11</image>
             <auth>
               <username>azzudi@naver.com</username>
               <password>chlwjdgns13!</password>
