--- a/gatewayserver/src/main/resources/application.yml
+++ b/gatewayserver/src/main/resources/application.yml
@@ -9,11 +9,20 @@ spring:
         locator:
           enabled: false # eureka server에 등록되어있는 url을 가져오기 위한 속성값.
           lower-case-service-id: true
+      httpclient:
+        connect-timeout: 1000 # 1초동안 응답이 없으면 cirbreaker open 처리함
+        response-timeout: 10s # 반응시간이 2초가 넘으면 에러처리
   rabbitmq:
     host: "localhost"
     port: 5672
     username: "guest"
     password: "guest"
+  data:
+    redis:
+      connect-timeout: 2s
+      host: localhost
+      port: 6379
+      timeout: 1s
 
 management:
   endpoints:
